crates/apollo-compiler/test_data/diagnostics/0032_duplicate_object_type_definition.txt
Error: the type `Query` is defined multiple times in the document
   ╭─[0032_duplicate_object_type_definition.graphql:5:6]
   │
 1 │ type Query {
   │      ──┬──  
   │        ╰──── previous definition of `Query` here
   │ 
 5 │ type Query {
   │      ──┬──  
   │        ╰──── `Query` redefined here
   │ 
   │ Help: remove or rename one of the definitions, or use `extend`
───╯

